--- a/worship/index.html
+++ b/worship/index.html
@@ -14,6 +14,7 @@
     <script src="../js/jquery/2.2.2.min.js"></script>
     <script src="../semantic/semantic.min.js"></script>
     <script src="../semantic/slide.min.js"></script>
+    <script src="../js/index.js"></script>
     <link rel="stylesheet" type="text/css" href="../semantic/semantic.min.css">
     <link rel="stylesheet" type="text/css" href="../css/index.css">
 
@@ -33,8 +34,8 @@
               <a class="active item" href="#">Alabanza</a>
             </div>
             <div class="right item">
-              <a class="ui inverted button" href="#">Entrar</a>
-              <a class="ui inverted button" href="#">Registrarse</a>
+              <!--<a class="ui inverted button" href="#">Entrar</a>
+              <a class="ui inverted button" href="#">Registrarse</a>-->
             </div>
           </div>
         </div>
@@ -42,6 +43,247 @@
 
       <div class="ui text container">
 
+        <!-- CHOOSE LETTER OR CHORDS -->
+        <div class="ui two item stackable tabs menu m1">
+          <a class="item i1 active" data-tab="letter">Letras</a>
+          <a class="item i1" data-tab="chords">Acordes</a>
+        </div>
+
+        <!-- CHOOSE LETTER -->
+        <div class="ui tab center aligned segment active" data-tab="letter">
+          <div class="ui large secondary pointing menu m2">
+            <a class="item i2 active" data-tab="song-1">Experiencia de Adorar</a>
+            <a class="item i2" data-tab="song-2">Gracia Sublime</a>
+            <a class="item i2" data-tab="song-3">En Tu Nombre</a>
+            <a class="item i2" data-tab="song-4">Vives en mi</a>
+          </div>
+          <div class="ui tab active" data-tab="song-1">
+            <div class="ui left aligned song-container">
+              <p>Es mejor un día en tu presencia</p>
+              <p>Que mil años fuera de ella</p>
+              <p>Pues nada se compara a ella</p>
+              <br>
+              <p>Es mejor un rincón en tu casa</p>
+              <p>Que tener el mejor palacio</p>
+              <p>Mejor estar en tu regazo</p>
+              <br>
+              <p>Y adorar, desde hoy hasta la eternidad</p>
+              <p>Y en tu presencia descansar</p>
+              <p>Pues no hay mejor lugar que estar donde tú estás</p>
+              <br>
+              <p>Y adorar, desde hoy hasta la eternidad</p>
+              <p>Y en tu presencia descansar</p>
+              <p>Pues no hay mejor lugar que estar donde tú estás</p>
+              <p>Y habitar, bajo tus alas contemplar</p>
+              <p>Tú gran poder y tu bondad</p>
+              <p>Y disfrutar de la experiencia de adorarte Jesús</p>
+              <br>
+              <p>///Quiero vivir en tu presencia</p>
+              <p>Quiero adorar hasta que no tenga fuerzas///</p>
+            </div>
+          </div>
+          <div class="ui tab" data-tab="song-2">
+            <div class="ui left aligned song-container">
+
+            </div>
+          </div>
+          <div class="ui tab" data-tab="song-3">
+            <div class="ui left aligned song-container">
+              <p>En tu nombre hoy venimos</p>
+              <p>Estamos tan agradecidos</p>
+              <p>Y por eso levantamos la voz y el corazón a ti</p>
+              <br>
+              <p>La alabanza te entregamos</p>
+              <p>Nuestro corazón postramos</p>
+              <p>Porque tú eres el motivo de nuestra adoración</p>
+              <br>
+              <p>A nadie daremos tu gloria compartida</p>
+              <p>//Pues es sólo para ti//</p>
+              <br>
+              <p>Levantamos nuestras manos</p>
+              <p>En tu nombre adoramos</p>
+              <p>Por quién eres, lo que has hecho y lo que harás</p>
+              <p> Eres rey y nos postramos</p>
+              <br>
+              <p>Eres Dios y proclamamos</p>
+              <p>Tu grandeza y tu bondad</p>
+              <p>//Eres rey y nos postramos Eres Dios y proclamamos</p>
+              <p>Tu grandeza y tu bondad//</p>
+            </div>
+          </div>
+          <div class="ui tab" data-tab="song-4">
+            <div class="ui left aligned song-container">
+              <p>Al despertar te cantaré,</p>
+              <p>mis ojos en ti fijaré,</p>
+              <p>al ritmo de tu corazón</p>
+              <p>caminaré hacia tu amor.</p>
+              <br>
+              <p>Tu fuego en mi interior</p>
+              <p>ardiendo está.</p>
+              <p>Salvaje amor que brillará,</p>
+              <p>esta pasión, todos verán,</p>
+              <p>tu gloria resplandecerá.</p>
+              <br>
+              <p>//Tú nunca me dejarás,</p>
+              <p>tu amor me sostendrá,</p>
+              <p>junto a mí estarás</p>
+              <p>y por siempre brillarás//</p>
+              <br>
+              <p>Tú vives en mí, vives en mí,</p>
+              <p>soy tuyo para siempre.</p>
+              <p>Vives en mí, vives en mí,</p>
+              <p>soy tuyo para siempre.</p>
+
+              <p>Tu fuego en mi interior</p>
+              <p>ardiendo está.</p>
+              <p>Salvaje amor que brillará,</p>
+              <p>esta pasión, todos verán,</p>
+              <p>tu gloria resplandecerá.</p>
+              <br>
+              <p>//Tú nunca me dejarás,</p>
+              <p>tu amor me sostendrá,</p>
+              <p>junto a mí estarás</p>
+              <p>y por siempre brillarás//</p>
+              <br>
+              <p>Tú vives en mí, vives en mí,</p>
+              <p>soy tuyo para siempre.</p>
+              <p>Vives en mí, vives en mí,</p>
+              <p>soy tuyo para siempre.</p>
+              <br>
+              <p>///Por siempre, por siempre,</p>
+              <p>por siempre en tu amor///</p>
+              <p>Por siempre, por siempre,</p>
+              <p>por siempre, yo sé que...</p>
+              <br>
+              <p>//Tú nunca me dejarás,</p>
+              <p>tu amor me sostendrá,</p>
+              <p>junto a mí estarás</p>
+              <p>y por siempre brillarás//</p>
+              <br>
+              <p>Tú vives en mí, vives en mí,</p>
+              <p>soy tuyo para siempre.</p>
+              <p>Vives en mí, vives en mí,</p>
+              <p>soy tuyo para siempre...</p>
+            </div>
+          </div>
+        </div>
+        <!-- CHOOSE CHORDS -->
+        <div class="ui tab segment" data-tab="chords">
+          <div class="ui large secondary pointing menu m2">
+            <a class="item i2 active" data-tab="song-1">Experiencia de Adorar</a>
+            <a class="item i2" data-tab="song-2">Gracia Sublime</a>
+            <a class="item i2" data-tab="song-3">En tu Nombre</a>
+            <a class="item i2" data-tab="song-4">Vives en mi</a>
+          </div>
+          <div class="ui tab active" data-tab="song-1">
+            <div class="ui left aligned song-container">
+              <p>Es mejor un día en tu presencia</p>
+              <p>Que mil años fuera de ella</p>
+              <p>Pues nada se compara a ella</p>
+              <br>
+              <p>Es mejor un rincón en tu casa</p>
+              <p>Que tener el mejor palacio</p>
+              <p>Mejor estar en tu regazo</p>
+              <br>
+              <p>Y adorar, desde hoy hasta la eternidad</p>
+              <p>Y en tu presencia descansar</p>
+              <p>Pues no hay mejor lugar que estar donde tú estás</p>
+              <br>
+              <p>Y adorar, desde hoy hasta la eternidad</p>
+              <p>Y en tu presencia descansar</p>
+              <p>Pues no hay mejor lugar que estar donde tú estás</p>
+              <p>Y habitar, bajo tus alas contemplar</p>
+              <p>Tú gran poder y tu bondad</p>
+              <p>Y disfrutar de la experiencia de adorarte Jesús</p>
+              <br>
+              <p>///Quiero vivir en tu presencia</p>
+              <p>Quiero adorar hasta que no tenga fuerzas///</p>
+            </div>
+          </div>
+          <div class="ui tab" data-tab="song-2">
+            <div class="ui left aligned song-container">
+
+            </div>
+          </div>
+          <div class="ui tab" data-tab="song-3">
+            <div class="ui left aligned song-container">
+              <p>En tu nombre hoy venimos</p>
+              <p>Estamos tan agradecidos</p>
+              <p>Y por eso levantamos la voz y el corazón a ti</p>
+              <br>
+              <p>La alabanza te entregamos</p>
+              <p>Nuestro corazón postramos</p>
+              <p>Porque tú eres el motivo de nuestra adoración</p>
+              <br>
+              <p>A nadie daremos tu gloria compartida</p>
+              <p>//Pues es sólo para ti//</p>
+              <br>
+              <p>Levantamos nuestras manos</p>
+              <p>En tu nombre adoramos</p>
+              <p>Por quién eres, lo que has hecho y lo que harás</p>
+              <p> Eres rey y nos postramos</p>
+              <br>
+              <p>Eres Dios y proclamamos</p>
+              <p>Tu grandeza y tu bondad</p>
+              <p>//Eres rey y nos postramos Eres Dios y proclamamos</p>
+              <p>Tu grandeza y tu bondad//</p>
+            </div>
+          </div>
+          <div class="ui tab" data-tab="song-4">
+            <div class="ui left aligned song-container">
+              <p>Al despertar te cantaré,</p>
+              <p>mis ojos en ti fijaré,</p>
+              <p>al ritmo de tu corazón</p>
+              <p>caminaré hacia tu amor.</p>
+              <br>
+              <p>Tu fuego en mi interior</p>
+              <p>ardiendo está.</p>
+              <p>Salvaje amor que brillará,</p>
+              <p>esta pasión, todos verán,</p>
+              <p>tu gloria resplandecerá.</p>
+              <br>
+              <p>//Tú nunca me dejarás,</p>
+              <p>tu amor me sostendrá,</p>
+              <p>junto a mí estarás</p>
+              <p>y por siempre brillarás//</p>
+              <br>
+              <p>Tú vives en mí, vives en mí,</p>
+              <p>soy tuyo para siempre.</p>
+              <p>Vives en mí, vives en mí,</p>
+              <p>soy tuyo para siempre.</p>
+
+              <p>Tu fuego en mi interior</p>
+              <p>ardiendo está.</p>
+              <p>Salvaje amor que brillará,</p>
+              <p>esta pasión, todos verán,</p>
+              <p>tu gloria resplandecerá.</p>
+              <br>
+              <p>//Tú nunca me dejarás,</p>
+              <p>tu amor me sostendrá,</p>
+              <p>junto a mí estarás</p>
+              <p>y por siempre brillarás//</p>
+              <br>
+              <p>Tú vives en mí, vives en mí,</p>
+              <p>soy tuyo para siempre.</p>
+              <p>Vives en mí, vives en mí,</p>
+              <p>soy tuyo para siempre.</p>
+              <br>
+              <p>///Por siempre, por siempre,</p>
+              <p>por siempre en tu amor///</p>
+              <p>Por siempre, por siempre,</p>
+              <p>por siempre, yo sé que...</p>
+              <br>
+              <p>//Tú nunca me dejarás,</p>
+              <p>tu amor me sostendrá,</p>
+              <p>junto a mí estarás</p>
+              <p>y por siempre brillarás//</p>
+              <br>
+              <p>Tú vives en mí, vives en mí,</p>
+              <p>soy tuyo para siempre.</p>
+              <p>Vives en mí, vives en mí,</p>
+              <p>soy tuyo para siempre...</p>
+            </div>
+          </div>
       </div>
     </div>
   </body>
