--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
-<script type="text/javascript">
-  window.location.pathname = '/RevolutionC29/worship/';
-</script>
+<!DOCTYPE html>
+<html lang="en-US">
+  <body>
+    <script type="text/javascript">
+      window.location.pathname = '/RevolutionC29/worship/';
+    </script>
+  </body>
+</html>
