--- a/worship/index.html
+++ b/worship/index.html
@@ -40,22 +40,39 @@
 
   <body>
     <div class="pusher">
-      <div class="ui masthead">
+
+      <div class="ui masthead computer only grid">
         <div class="ui container">
-          <div class="ui large secondary inverted pointing menu">
-            <div class="left item">
-              <a class="item" href="#">
-                <i class="icon huge logo c29"></i>
-              </a>
-              <a class="active item" href="#">Alabanza</a>
-            </div>
-            <div class="right item">
-              <!--<a class="ui inverted button" href="#">Entrar</a>
-              <a class="ui inverted button" href="#">Registrarse</a>-->
+          <div class="ui secondary pointing menu">
+            <a class="container-logoc29">
+              <image class="logoc29" src="../images/logo.png">
+            </a>
+            <a class="item">
+              <i class="home icon"></i> Principal
+            </a>
+            <a class="active item">
+              <i class="music icon"></i> Alabanza
+            </a>
+            <a class="item">
+              <i class="calendar icon"></i> Eventos
+            </a>
+            <div class="right menu">
+              <div class="ui language floating dropdown link item">
+                <i class="world icon"></i>
+                <div class="text">Español</div>
+              </div>
             </div>
           </div>
         </div>
       </div>
+
+      <div class="ui masthead-mobile mobile only tablet only grid">
+              <div class="four wide column mobile-container"><i class="home icon element-mobile"></i></div>
+              <div class="four wide column mobile-container active"><i class="music icon element-mobile"></i></div>
+              <div class="four wide column mobile-container"><i class="calendar icon element-mobile"></i></div>
+              <div class="four wide column mobile-container"><i class="world icon element-mobile"></i></div>
+      </div>
+
 
       <div class="ui text container">
 
@@ -153,7 +170,237 @@
             </div>
           </div>
           <div class="ui tab segment" data-tab="song-2">
+
             <div class="ui left aligned song-container">
+
+              <div class="ui center aligned grid">
+
+                <div class="sixteen wide column">
+
+                  <div class="ui divided list"><div class="item"><i class="music icon"></i><div class="content">
+                      <div class="header">Intro</div>
+                  </div></div><div class="item"></div></div>
+
+                  <div class="row chords"><div class="ui grid">
+                    <div class="four wide column"><div class="chord">A</div></div>
+                    <div class="four wide column"><div class="chord">Asus</div></div>
+                    <div class="four wide column"><div class="chord">D</div></div>
+                    <div class="four wide column"><div class="chord">Dsus</div></div>
+                  </div></div>
+                  <div class="row letters"><div class="ui one column grid">
+                      <div class="column"><div class="letter"></div></div>
+                  </div></div>
+                </div>
+
+
+                <div class="sixteen wide column">
+                  <div class="ui divided list"><div class="item"><i class="music icon"></i><div class="content">
+                      <div class="header">Verso 1</div>
+                  </div></div><div class="item"></div></div>
+                    <div class="row chords"><div class="ui grid">
+                      <div class="four wide column"><div class="chord">A</div></div>
+                      <div class="four wide column"><div class="chord">D</div></div>
+                      <div class="four wide column"><div class="chord">F#m</div></div>
+                      <div class="two wide column"><div class="chord">E</div></div>
+                      <div class="two wide column"><div class="chord">D</div></div>
+                    </div></div>
+                    <div class="row letters"><div class="ui one column grid">
+                        <div class="column"><div class="letter">Quién rompe el poder del pecado, su amor es fuerte y poderoso, El Rey de gloria, El Rey de majestad.</div></div>
+                    </div></div>
+                  </div>
+
+                  <div class="sixteen wide column">
+                    <div class="ui divided list"><div class="item"><i class="music icon"></i><div class="content">
+                        <div class="header">Verso 2</div>
+                    </div></div><div class="item"></div></div>
+                    <div class="row chords"><div class="ui grid">
+                      <div class="four wide column"><div class="chord">A</div></div>
+                      <div class="four wide column"><div class="chord">D</div></div>
+                      <div class="four wide column"><div class="chord">F#m</div></div>
+                      <div class="two wide column"><div class="chord">E</div></div>
+                      <div class="two wide column"><div class="chord">D</div></div>
+                    </div></div>
+                    <div class="row letters"><div class="ui one column grid">
+                        <div class="column"><div class="letter">Conmueve el mundo con su estruendo, Y nos asombra con maravillas, El Rey de gloria, El Rey de majestad</div></div>
+                    </div></div>
+                  </div>
+
+                  <div class="sixteen wide column">
+                    <div class="ui divided list"><div class="item"><i class="music icon"></i><div class="content">
+                        <div class="header">Coro</div>
+                    </div></div><div class="item"></div></div>
+                    <div class="row chords"><div class="ui grid">
+                      <div class="four wide column"><div class="chord">A</div></div>
+                      <div class="four wide column"><div class="chord">D</div></div>
+                      <div class="four wide column"><div class="chord">F#m</div></div>
+                      <div class="four wide column"><div class="chord">E</div></div>
+                    </div></div>
+                    <div class="row letters"><div class="ui one column grid">
+                        <div class="column"><div class="letter">Gracia sublime es, Perfecto es tu amor , Tomaste mi lugar, Cargaste tu mi cruz</div></div>
+                    </div></div>
+                  </div>
+
+                  <div class="sixteen wide column">
+                    <div class="ui divided list"><div class="item"><i class="music icon"></i><div class="content">
+                        <div class="header">Coro</div>
+                    </div></div><div class="item"></div></div>
+                    <div class="row chords"><div class="ui grid">
+                      <div class="four wide column"><div class="chord">A</div></div>
+                      <div class="four wide column"><div class="chord">D</div></div>
+                      <div class="four wide column"><div class="chord">F#m</div></div>
+                      <div class="four wide column"><div class="chord">E</div></div>
+                    </div></div>
+                    <div class="row letters"><div class="ui one column grid">
+                        <div class="column"><div class="letter">Tu vida diste ahí, Y ahora libre soy, Jesús te adoro, por lo que hiciste en mi</div></div>
+                    </div></div>
+                  </div>
+
+                  <div class="sixteen wide column">
+                    <div class="ui divided list"><div class="item"><i class="music icon"></i><div class="content">
+                        <div class="header">Intro</div>
+                    </div></div><div class="item"></div></div>
+                    <div class="row chords"><div class="ui grid">
+                      <div class="four wide column"><div class="chord">A</div></div>
+                      <div class="four wide column"><div class="chord">Asus</div></div>
+                      <div class="four wide column"><div class="chord">D</div></div>
+                      <div class="four wide column"><div class="chord">Dsus</div></div>
+                    </div></div>
+                    <div class="row letters"><div class="ui one column grid">
+                        <div class="column"><div class="letter"></div></div>
+                    </div></div>
+                  </div>
+
+                  <div class="sixteen wide column">
+                    <div class="ui divided list"><div class="item"><i class="music icon"></i><div class="content">
+                        <div class="header">Verso 3</div>
+                    </div></div><div class="item"></div></div>
+                    <div class="row chords"><div class="ui grid">
+                      <div class="four wide column"><div class="chord">A</div></div>
+                      <div class="four wide column"><div class="chord">D</div></div>
+                      <div class="four wide column"><div class="chord">F#m</div></div>
+                      <div class="two wide column"><div class="chord">E</div></div>
+                      <div class="two wide column"><div class="chord">D</div></div>
+                    </div></div>
+                    <div class="row letters"><div class="ui one column grid">
+                        <div class="column"><div class="letter">Pusiste en orden todo el caos, Nos adoptaste como tus hijos , El Rey de gloria, El Rey de majestad.</div></div>
+                    </div></div>
+                  </div>
+
+                  <div class="sixteen wide column">
+                    <div class="ui divided list"><div class="item"><i class="music icon"></i><div class="content">
+                        <div class="header">Verso 4</div>
+                    </div></div><div class="item"></div></div>
+                    <div class="row chords"><div class="ui grid">
+                      <div class="four wide column"><div class="chord">A</div></div>
+                      <div class="four wide column"><div class="chord">D</div></div>
+                      <div class="four wide column"><div class="chord">F#m</div></div>
+                      <div class="two wide column"><div class="chord">E</div></div>
+                      <div class="two wide column"><div class="chord">D</div></div>
+                    </div></div>
+                    <div class="row letters"><div class="ui one column grid">
+                        <div class="column"><div class="letter">El que gobierna con su justicia, Y resplandece con su belleza, El Rey de gloria, El Rey de majestad.</div></div>
+                    </div></div>
+                  </div>
+
+                  <div class="sixteen wide column">
+                    <div class="ui divided list"><div class="item"><i class="music icon"></i><div class="content">
+                        <div class="header">Puente</div>
+                    </div></div><div class="item"></div></div>
+                    <div class="row chords"><div class="ui grid">
+                      <div class="four wide column"><div class="chord">A</div></div>
+                      <div class="four wide column"><div class="chord">D</div></div>
+                      <div class="four wide column"><div class="chord">F#m</div></div>
+                      <div class="two wide column"><div class="chord">E</div></div>
+                      <div class="two wide column"><div class="chord">D</div></div>
+                    </div></div>
+                    <div class="row letters"><div class="ui one column grid">
+                        <div class="column"><div class="letter">Digno es el Cordero de Dios, Digno es el Rey que la muerte venció</div></div>
+                    </div></div>
+                  </div>
+
+                  <div class="sixteen wide column">
+                    <div class="ui divided list"><div class="item"><i class="music icon"></i><div class="content">
+                        <div class="header">Puente</div>
+                    </div></div><div class="item"></div></div>
+                    <div class="row chords"><div class="ui grid">
+                      <div class="four wide column"><div class="chord">A</div></div>
+                      <div class="four wide column"><div class="chord">D</div></div>
+                      <div class="four wide column"><div class="chord">F#m</div></div>
+                      <div class="two wide column"><div class="chord">E</div></div>
+                      <div class="two wide column"><div class="chord">D</div></div>
+                    </div></div>
+                    <div class="row letters"><div class="ui one column grid">
+                        <div class="column"><div class="letter">Digno es el Cordero de Dios, Digno es el Rey que la muerte venció</div></div>
+                    </div></div>
+                  </div>
+
+                  <div class="sixteen wide column">
+                    <div class="ui divided list"><div class="item"><i class="music icon"></i><div class="content">
+                        <div class="header">Puente</div>
+                    </div></div><div class="item"></div></div>
+                    <div class="row chords"><div class="ui grid">
+                      <div class="four wide column"><div class="chord">A</div></div>
+                      <div class="four wide column"><div class="chord">D</div></div>
+                      <div class="four wide column"><div class="chord">F#m</div></div>
+                      <div class="two wide column"><div class="chord">E</div></div>
+                      <div class="two wide column"><div class="chord">D</div></div>
+                    </div></div>
+                    <div class="row letters"><div class="ui one column grid">
+                        <div class="column"><div class="letter">Digno es el Cordero de Dios, Digno es el Rey que la muerte venció</div></div>
+                    </div></div>
+                  </div>
+
+
+                  <div class="sixteen wide column">
+                    <div class="ui divided list"><div class="item"><i class="music icon"></i><div class="content">
+                        <div class="header">Puente</div>
+                    </div></div><div class="item"></div></div>
+                    <div class="row chords"><div class="ui grid">
+                      <div class="four wide column"><div class="chord">A</div></div>
+                      <div class="four wide column"><div class="chord">D</div></div>
+                      <div class="four wide column"><div class="chord">F#m</div></div>
+                      <div class="two wide column"><div class="chord">E</div></div>
+                      <div class="two wide column"><div class="chord">D</div></div>
+                    </div></div>
+                    <div class="row letters"><div class="ui one column grid">
+                        <div class="column"><div class="letter">Digno es el Cordero de Dios, Digno, Digno, Digno</div></div>
+                    </div></div>
+                  </div>
+
+
+
+                  <div class="sixteen wide column">
+                    <div class="ui divided list"><div class="item"><i class="music icon"></i><div class="content">
+                        <div class="header">Coro</div>
+                    </div></div><div class="item"></div></div>
+                    <div class="row chords"><div class="ui grid">
+                      <div class="four wide column"><div class="chord">A</div></div>
+                      <div class="four wide column"><div class="chord">D</div></div>
+                      <div class="four wide column"><div class="chord">F#m</div></div>
+                      <div class="four wide column"><div class="chord">E</div></div>
+                    </div></div>
+                    <div class="row letters"><div class="ui one column grid">
+                        <div class="column"><div class="letter">Gracia sublime es, Perfecto es tu amor , Tomaste mi lugar, Cargaste tu mi cruz</div></div>
+                    </div></div>
+                  </div>
+
+                  <div class="sixteen wide column">
+                    <div class="ui divided list"><div class="item"><i class="music icon"></i><div class="content">
+                        <div class="header">Coro</div>
+                    </div></div><div class="item"></div></div>
+                    <div class="row chords"><div class="ui grid">
+                      <div class="four wide column"><div class="chord">A</div></div>
+                      <div class="four wide column"><div class="chord">D</div></div>
+                      <div class="four wide column"><div class="chord">F#m</div></div>
+                      <div class="four wide column"><div class="chord">E</div></div>
+                    </div></div>
+                    <div class="row letters"><div class="ui one column grid">
+                        <div class="column"><div class="letter">Tu vida diste ahí, Y ahora libre soy, Jesús te adoro, por lo que hiciste en mi</div></div>
+                    </div></div>
+                  </div>
+
+
+              </div>
 
             </div>
           </div>
@@ -191,6 +438,9 @@
           </div>
         </div>
       </div>
+    </div>
+
+
     </div>
   </body>
 </html>
