--- a/events/index.html
+++ b/events/index.html
@@ -13,7 +13,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="#222222">
 
     <!-- Site Properities -->
-    <title>Alabanza - Revolution C29</title>
+    <title>Eventos - RevolutionC29</title>
     <meta name="descrption" content="Proyecto personal para ayudar al grupo de jovenes de C29 en Barcelona." />
 		<link rel="shortcut icon" type="image/x-icon" href="../images/logo.png">
 		<link rel="shortcut icon" type="image/png" href="../images/logo.png" />
@@ -25,12 +25,10 @@
     <script src="../js/jquery/2.2.2.min.js"></script>
     <script src="../semantic/semantic.min.js"></script>
     <script src="../semantic/slide.min.js"></script>
-    <script src="../js/data.js"></script>
-    <script src="../js/worship.js"></script>
     <script src="../js/header-footer.js"></script>
-    <script src="../js/beru-theme/elements.js"></script>
+    <script src="../js/events.js"></script>
     <link rel="stylesheet" type="text/css" href="../semantic/semantic.min.css">
-    <link rel="stylesheet" type="text/css" href="../css/worship.css">
+    <link rel="stylesheet" type="text/css" href="../css/events.css">
     <link rel="stylesheet" type="text/css" href="../css/header-footer.css">
 
     <meta name="description" content="Semantic empowers designers and developers by creating a shared vocabulary for UI." />
@@ -52,10 +50,10 @@
             <a class="item">
               <i class="home icon"></i> Principal
             </a>
-            <a class="active item" href="../worship">
+            <a class="item" href="../worship">
               <i class="music icon"></i> Alabanza
             </a>
-            <a class="item" href="../events">
+            <a class="active item" href="../events">
               <i class="calendar icon"></i> Eventos
             </a>
             <div class="right menu">
@@ -69,21 +67,18 @@
       </div>
 
       <div class="ui masthead-mobile mobile only tablet only grid">
-              <div class="four wide column mobile-container"><i class="home icon element-mobile"></i></div>
-              <div class="four wide column mobile-container active"><i class="music icon element-mobile"></i></div>
-              <div class="four wide column mobile-container"><i class="calendar icon element-mobile"></i></div>
-              <div class="four wide column mobile-container"><i class="world icon element-mobile"></i></div>
+              <div class="four wide column mobile-container home-link"><i class="home icon element-mobile"></i></div>
+              <div class="four wide column mobile-container worship-link"><i class="music icon element-mobile"></i></div>
+              <div class="four wide column mobile-container events-link active"><i class="calendar icon element-mobile"></i></div>
+              <div class="four wide column mobile-container language-link"><i class="world icon element-mobile"></i></div>
       </div>
 
       <div class="ui text container">
-        <!-- CHOOSE LETTER OR CHORDS -->
-        <div class="ui fluid two item tabs menu m1">
-          <a class="item i1 active" data-tab="Letras">Letras</a>
-          <a class="item i1" data-tab="Acordes">Acordes</a>
-        </div>
-        <div class="ui tab active" data-tab="Letras" id="Letras"></div>
-        <div class="ui tab" data-tab="Acordes" id="Acordes">
-      </div>
+
+
+        EVENTS
+
+
     </div>
 
   </div>
